# gapic-showcase

./: .bazeliskrc  .bazelrc  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  TLS_GUIDE.md  TODO.md  WORKSPACE.bazel  echo.go  echo_test.go  feature_testing.go  feature_testing_test.go  go.mod  go.sum  main.go  operation_store.go  operations.go  renovate.json  showcase.proto  test_gapic_showcase.desc  version.go
.circleci/: config.yaml  config.yml
.github/: CODEOWNERS  label-sync.yml  release-please.yml  sync-repo-settings.yaml
.github/workflows/: assets.yaml  ci.yaml  release.yaml
acceptance/passing/: echo.proto  google  include.google  sample.yaml
client/: auxiliary.go  auxiliary_go123.go  compliance_client.go  compliance_client_example_go123_test.go  compliance_client_example_test.go  doc.go  echo_client.go  echo_client_example_go123_test.go  echo_client_example_test.go  gapic_metadata.json  helpers.go  identity_client.go  identity_client_example_go123_test.go  identity_client_example_test.go  messaging_client.go  messaging_client_example_go123_test.go  messaging_client_example_test.go  resumable_upload_client.go  resumable_upload_client_example_go123_test.go  resumable_upload_client_example_test.go  sequence_client.go  sequence_client_example_go123_test.go  sequence_client_example_test.go  testing_client.go  testing_client_example_go123_test.go  testing_client_example_test.go
cmd/: daemon.go  echo.go  echo_service.go  loggers.go  operation_service.go  root.go  run.go  start.go
cmd/compile_protos/: main.go
cmd/gapic-showcase/: README.md  attempt-sequence.go  attempt-streaming-sequence.go  block.go  chat.go  collect.go  completion.go  compliance_custom_test.go  compliance_service.go  compliance_suite_errors_test.go  compliance_suite_negative_test.go  compliance_suite_test.go  connect.go  create-blurb.go  create-room.go  create-sequence.go  create-session.go  create-streaming-sequence.go  create-user.go  defaults.go  delete-blurb.go  delete-room.go  delete-session.go  delete-test.go  delete-user.go  echo-authentication.go  echo-error-details.go  echo.go  echo_service.go  endpoint.go  endpoint_test.go  expand.go  fail-echo-with-details.go  gapic-showcase.go  get-blurb.go  get-enum.go  get-room.go  get-sequence-report.go  get-session.go  get-streaming-sequence-report.go  (+41 more)
cmd/gapic-showcase/qualifier/: assets.go  dependencies.go  generator.go  prepare-to-qualify  qualify.go  scenario.go
cmd/qualify/: assets.go  generator.go  prepare-to-qualify  qualify.go  scenario.go  suite.go
cmd/server/: main.go
cmd/showcase/: chat.go  defaults.go  echo_service.go  get-blurb.go  get-room.go  get-user.go  loggers.go  showcase.go  stream-blurbs.go  testing_service.go  update-user.go
nodejs-server/: .gitignore  README.md  package.json
nodejs-server/src/: echoServer.ts  index.ts  operationsServer.ts
nodejs-server/test/: test.sh
nodejs-server/test/fixtures/: collect.in  test.baseline
schema/: chat_room.proto  echo.proto  identity.proto  messaging.proto  testing.proto  user.proto
schema/google/showcase/v1beta1/: BUILD.bazel  compliance.proto  compliance_suite.json  compliance_suite.textproto  echo.proto  identity.proto  messaging.proto  rest_error.proto  resumable_upload.proto  sequence.proto  showcase_grpc_service_config.json  showcase_v1beta1.yaml  testing.proto
server/: README.md  blurb_db.go  echo.go  echo_service.go  echo_service_test.go  echo_test.go  fallback.go  identity_service.go  identity_service_test.go  main.go  messaging_service.go  messaging_service_test.go  observer.go  observer_test.go  operation_store.go  operations.go  operations_service.go  operations_service_test.go  operations_test.go  page_token.go  page_token_test.go  room_db.go  session.go  session_test.go  showcase.go  showcase_test.go  test.go  test_test.go  testing_service.go  testing_service_test.go  tls_adapters.go  unique_id.go  unique_id_test.go  user_db.go  waiter.go  waiter_test.go
server/genproto/: chat_room.pb.go  compliance.pb.go  compliance_grpc.pb.go  echo.pb.go  echo_grpc.pb.go  identity.pb.go  identity_grpc.pb.go  messaging.pb.go  messaging_grpc.pb.go  rest_error.pb.go  resumable_upload.pb.go  resumable_upload_grpc.pb.go  sequence.pb.go  sequence_grpc.pb.go  showcase.pb.go  testing.pb.go  testing_grpc.pb.go  user.pb.go
server/genrest/: README.md  compliance.go  compliance_custom.go  compliance_manual.go  echo.go  echo.txt  genrest.go  iampolicy.go  identity.go  identity.txt  locations.go  messaging.go  messaging.txt  operations.go  resumableuploadservice.go  sequenceservice.go  sequenceservice.txt  showcase-rest-sample-response.txt  testing.go  testing.txt
server/resumableupload/: README.md  resumableupload.go  resumableupload_test.go
server/services/: compliance_service.go  compliance_service_test.go  compliance_suite.json  echo_service.go  echo_service_test.go  iam_policy_service.go  iam_policy_service_test.go  identity_service.go  identity_service_test.go  locations_service.go  locations_service_test.go  messaging_service.go  messaging_service_test.go  operations_service.go  operations_service_test.go  resumable_upload_service.go  sequence_service.go  sequence_service_test.go  services.go  streaming_sequence_service.go  streaming_sequence_service_test.go  test_common.go  testing_service.go  testing_service_test.go  util.go
server/spec/: showcase_tests.go
server/spec/v1/: unary.go  unary_test.go
util/: compile_protos.go  execute.go  stage_protos.go
util/cmd/bump_version/: main.go
util/cmd/compile_protos/: main.go
util/cmd/generate_cli/: main.go
util/cmd/print_changes/: main.go
util/cmd/protoc-gen-go_rest_server/: README.md  main.go
util/cmd/release/: main.go
util/compile_protos/: main.go
util/genrest/: README.md  errors.go  genserver.go  gomodel.go  gomodelcreator.go  goviewcreator.go  goviewcreator_test.go  handlers.go  pathtemplate.go  protomodel.go  protomodelcreator.go
util/protoc-gen-go_rest_server/: README.md  main.go
util/release/: main.go
util/rest-gen/: README.md  main.go
(+47 files in other folders)
