# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
A workspace for gapic-showcase
"""
workspace(name = "gapic_showcase")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

##
# googleapis for the common protos
#
http_archive(
  name = "com_google_googleapis",
  strip_prefix = "googleapis-8d52a0bd5332bec365647fd792102a25a665e9fe",
  urls = ["https://github.com/googleapis/googleapis/archive/8d52a0bd5332bec365647fd792102a25a665e9fe.zip"],
  sha256 = "4a5cd7834a53c1fc62252ec2f1f905b326c24fec7a2e28ba9d62bbaf87a9a26f"
)
load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")
switched_rules_by_language(name = "com_google_googleapis_imports", grpc = True)

##
# protobuf for the protobuf protos
#
http_archive(
  name = "com_google_protobuf",
  sha256 = "a79296d3ee43cab5cf72fe702ba8822a607720704c439fad6f285a37f51550b4",
  urls = ["https://github.com/protocolbuffers/protobuf/archive/v34.1.zip"],
  strip_prefix = "protobuf-34.1",
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

http_archive(
    name = "bazel_features",
    sha256 = "adfdb3cffab3a99a63363d844d559a81965d2b61a6062dd51a3d2478d416768f",
    strip_prefix = "bazel_features-1.45.0",
    url = "https://github.com/bazel-contrib/bazel_features/releases/download/v1.45.0/bazel_features-v1.45.0.tar.gz",
)
load("@bazel_features//:deps.bzl", "bazel_features_deps")
bazel_features_deps()

##
# rules_proto for the proto_library rule
#
http_archive(
    name = "rules_proto",
    sha256 = "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
    # Using a release candidate because the latest stable release is too old for
    # our needs, and we want to stay closer to the latest without pinning to a
    # specific commit.
    strip_prefix = "rules_proto-7.1.0",
    url = "https://github.com/bazelbuild/rules_proto/releases/download/7.1.0/rules_proto-7.1.0.tar.gz",
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies","rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()
