# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
A workspace for gapic-showcase
"""
workspace(name = "gapic_showcase")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

##
# googleapis for the common protos
#
http_archive(
  name = "com_google_googleapis",
  strip_prefix = "googleapis-1dbb1a14e079f78d9214f8e48bf083f32e3ddb96",
  urls = ["https://github.com/googleapis/googleapis/archive/1dbb1a14e079f78d9214f8e48bf083f32e3ddb96.zip"],
  sha256 = "08fdc10f41d9b5e550164371fbe9365a5b02ff8a189a5c1c3e64e688077bed04"
)
load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")
switched_rules_by_language(name = "com_google_googleapis_imports", grpc = True)

##
# protobuf for the protobuf protos
#
http_archive(
  name = "com_google_protobuf",
  sha256 = "a79296d3ee43cab5cf72fe702ba8822a607720704c439fad6f285a37f51550b4",
  urls = ["https://github.com/protocolbuffers/protobuf/archive/v34.1.zip"],
  strip_prefix = "protobuf-34.1",
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

http_archive(
    name = "bazel_features",
    sha256 = "6a727a78c0134b1b912c97c0937e1c956f35775934ae3e1f4af4156f8d5d1ff4",
    strip_prefix = "bazel_features-1.47.1",
    url = "https://github.com/bazel-contrib/bazel_features/releases/download/v1.47.1/bazel_features-v1.47.1.tar.gz",
)
load("@bazel_features//:deps.bzl", "bazel_features_deps")
bazel_features_deps()

##
# rules_proto for the proto_library rule
#
http_archive(
    name = "rules_proto",
    sha256 = "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
    # Using a release candidate because the latest stable release is too old for
    # our needs, and we want to stay closer to the latest without pinning to a
    # specific commit.
    strip_prefix = "rules_proto-7.1.0",
    url = "https://github.com/bazelbuild/rules_proto/releases/download/7.1.0/rules_proto-7.1.0.tar.gz",
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies","rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()
