# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
A workspace for gapic-showcase
"""
workspace(name = "gapic_showcase")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

##
# googleapis for the common protos
#
http_archive(
  name = "com_google_googleapis",
  strip_prefix = "googleapis-f4a164aa9daf580d7f434c4004b7c894572f1ab4",
  urls = ["https://github.com/googleapis/googleapis/archive/f4a164aa9daf580d7f434c4004b7c894572f1ab4.zip"],
  sha256 = "c4d1b8cfee45157c24a4484f0c4d0f011bb21f5d46497374b378133f0a08c3aa"
)
load("@com_google_googleapis//:repository_rules.bzl", "switched_rules_by_language")
switched_rules_by_language(name = "com_google_googleapis_imports", grpc = True)

##
# protobuf for the protobuf protos
#
http_archive(
  name = "com_google_protobuf",
  sha256 = "62fd7713d186c7ed9a94e8db8c7f3ad1573aab2e166ed90fc145804d18dfb5bd",
  urls = ["https://github.com/protocolbuffers/protobuf/archive/v35.0.zip"],
  strip_prefix = "protobuf-35.0",
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

http_archive(
    name = "bazel_features",
    sha256 = "6a727a78c0134b1b912c97c0937e1c956f35775934ae3e1f4af4156f8d5d1ff4",
    strip_prefix = "bazel_features-1.47.1",
    url = "https://github.com/bazel-contrib/bazel_features/releases/download/v1.47.1/bazel_features-v1.47.1.tar.gz",
)
load("@bazel_features//:deps.bzl", "bazel_features_deps")
bazel_features_deps()

##
# rules_proto for the proto_library rule
#
http_archive(
    name = "rules_proto",
    sha256 = "14a225870ab4e91869652cfd69ef2028277fc1dc4910d65d353b62d6e0ae21f4",
    # Using a release candidate because the latest stable release is too old for
    # our needs, and we want to stay closer to the latest without pinning to a
    # specific commit.
    strip_prefix = "rules_proto-7.1.0",
    url = "https://github.com/bazelbuild/rules_proto/releases/download/7.1.0/rules_proto-7.1.0.tar.gz",
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies","rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()
