# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
Provides proto_library target
Exports grpc service config
"""
load ("@rules_proto//proto:defs.bzl",
  "proto_library")

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])
exports_files(glob(["*.json"]) + glob(["*.yaml"]))

##
# the proto files wrapped with dependencies
#
proto_library(
  name = "showcase_proto",
  srcs = [":compliance.proto", ":echo.proto", ":identity.proto", ":messaging.proto", ":rest_error.proto", ":sequence.proto", ":testing.proto" ],
  deps = [
    "@com_google_googleapis//google/api:annotations_proto",
    "@com_google_googleapis//google/api:client_proto",
    "@com_google_googleapis//google/api:field_behavior_proto",
    "@com_google_googleapis//google/api:field_info_proto",
    "@com_google_googleapis//google/api:resource_proto",
    "@com_google_googleapis//google/api:routing_proto",
    "@com_google_googleapis//google/longrunning:operations_proto",
    "@com_google_googleapis//google/rpc:code_proto",
    "@com_google_googleapis//google/rpc:error_details_proto",
    "@com_google_googleapis//google/rpc:status_proto",
    "@com_google_protobuf//:any_proto",
    "@com_google_protobuf//:duration_proto",
    "@com_google_protobuf//:empty_proto",
    "@com_google_protobuf//:field_mask_proto",
    "@com_google_protobuf//:timestamp_proto",
  ]
)
# This file is a partial recovery of the BUILD.bazel file, which was last seen on
# https://github.com/googleapis/sdk-platform-java/commit/d59b87feddce69077c05ef8e44faea8c44f3338b
#
# We keep it here in order to leverage the protoc parameter inference of the hermetic build Docker image,
# which parses BUILD.bazel files from folders with api definitions (e.g. googleapis/googleapis).

java_gapic_library(
    grpc_service_config = "showcase_grpc_service_config.json",
    service_yaml = "showcase_v1beta1.yaml",
    test_deps = [
        ":showcase_java_grpc",
        "@com_google_googleapis//google/cloud/location:location_java_grpc",
        "@com_google_googleapis//google/iam/v1:iam_java_grpc"
    ],
    transport = "grpc+rest",
)

proto_library_with_info(
    deps = [
        "//google/cloud/location:location_proto",
        "//google/iam/v1:iam_policy_proto"
   ],
)

java_gapic_assembly_gradle_pkg(
    include_samples = True,
)
